Cloning repo and testing

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Project Home Page</title>
+    <title>Project : Service Learning </title>
 </head>
 <body>
-    <h1>Project Home Page</h1>
+    <h1>Project: SERVICE LEARNING</h1>
+    <marquee>WELCOME TO SERVICE LEARNING</marquee>
 </body>
 </html>
