moved index.html to public folder

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="client/css/style.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainController">
 
-<div ng-include="'views/header/header.view.html'"></div>
+<div ng-include="'client/views/header/header.view.html'"></div>
 
 
 <div class="container-fluid">
@@ -27,12 +27,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
 
-<script src="app.js"></script>
-<script src="config.js"></script>
+<script src="client/app.js"></script>
+<script src="client/config.js"></script>
 
-<script src="views/main/main.controller.js"></script>
-<script src="views/login/login.controller.js"></script>
-<script src="views/header/header.controller.js"></script>
+<script src="client/views/main/main.controller.js"></script>
+<script src="client/views/login/login.controller.js"></script>
+<script src="client/views/header/header.controller.js"></script>
 
 
 
