--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 <script src="client/views/main/main.controller.js"></script>
 <script src="client/views/login/login.controller.js"></script>
 <script src="client/views/header/header.controller.js"></script>
-
+<script src="client/views/register/register.controller.js"></script>
 
 
 </body>
