made admin partner and faculty pages

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
 <script src="client/views/login/login.controller.js"></script>
 <script src="client/views/header/header.controller.js"></script>
 <script src="client/views/register/register.controller.js"></script>
+<script src="client/views/admin/admin.controller.js"></script>
+<script src="client/views/partner/partner.controller.js"></script>
+<script src="client/views/faculty/faculty.view.controller.js"></script>
+
 
 
 </body>
