--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
 <script src="client/views/partner/partner.controller.js"></script>
 <script src="client/views/faculty/faculty.view.controller.js"></script>
 
+<script src="client/services/user.service.client.js"></script>
+<script src="client/services/partnerOrgInfo.service.client.js"></script>
 
 
 </body>
