registration of partner and organization

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,15 @@
 <script src="client/views/login/login.controller.js"></script>
 <script src="client/views/header/header.controller.js"></script>
 <script src="client/views/register/register.controller.js"></script>
+<script src="client/views/register/orgRegister.controller.js"></script>
 <script src="client/views/admin/admin.controller.js"></script>
 <script src="client/views/partner/partner.controller.js"></script>
 <script src="client/views/faculty/faculty.view.controller.js"></script>
 
 <script src="client/services/user.service.client.js"></script>
 <script src="client/services/partnerOrgInfo.service.client.js"></script>
+<script src="client/services/orgInfo.service.client.js"></script>
+
 
 
 </body>
