--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,12 @@
 
 <!-------------------------------------------------------------------------------------->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
+<script src="client/directives/jga-directives.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
 
 <script src="client/app.js"></script>
 <script src="client/config.js"></script>
@@ -43,19 +45,18 @@
 <script src="client/views/admin/adminPartnerSpecificProposalView.controller.js"></script>
 <script src="client/views/admin/partnerList.controller.js"></script>
 <script src="client/views/admin/partnerListInProgress.controller.js"></script>
-
 <script src="client/views/admin/try.controller.js"></script>
+<script src="client/views/admin/forms/fields.controller.js"></script>
+<script src="client/views/admin/forms/forms.controller.js"></script>
+<script src="client/views/forgotpwd/forgotpwd.controller.js"></script>
 
 
 <script src="client/services/user.service.client.js"></script>
 <script src="client/services/partnerOrgInfo.service.client.js"></script>
-
 <script src="client/services/applicationInfo.service.client.js"></script>
-
 <script src="client/services/orgInfo.service.client.js"></script>
-
-<script src="client/views/forgotpwd/forgotpwd.controller.js"></script>
-
+<script src="client/services/field.service.client.js"></script>
+<script src="client/services/forms.service.client.js"></script>
 
 </body>
 </html>
