Adding admin features

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
 <script src="client/services/orgInfo.service.client.js"></script>
 <script src="client/services/field.service.client.js"></script>
 <script src="client/services/forms.service.client.js"></script>
+<script src="client/views/passwordChange/passwordChange.controller.js"></script>
 
 </body>
 </html>
