admin partner link done

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
 <script src="client/views/partner/partner.controller.js"></script>
 <script src="client/views/faculty/faculty.view.controller.js"></script>
 <script src="client/views/admin/adminPartnerSpecificProposal.controller.js"></script>
+<script src="client/views/admin/adminPartnerSpecificProposalViewInProgress.controller.js"></script>
+<script src="client/views/admin/adminPartnerSpecificProposalInProgress.controller.js"></script>
 <script src="client/views/admin/adminPartnerSpecificProposalView.controller.js"></script>
 <script src="client/views/admin/partnerList.controller.js"></script>
 <script src="client/views/admin/partnerListInProgress.controller.js"></script>
